Text wrapping, iPhone display issues, enabled user-list toggle.
Used Javascript and regex to insert zero width spaces into longer
non-html words, fixed some iPhone zooming issues, and made the Connected
Users list toggle-able.

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -83,8 +83,14 @@ body {
   z-index: 2;
 }
 
+h1{
+  padding: 0;
+  margin: 0;
+  margin-bottom: 0px;
+  color: #444;
+}
+
 .toBottom{
-	font-style: underline;
 	color:#777;
 }
 
@@ -92,10 +98,12 @@ body {
 	cursor: pointer;
 }
 
-h1{
-	padding: 0;
-	margin: 0;
-	margin-bottom: 0px;
-	color: #444;
-	font-style: underline;
+#connectedUsersLabel{
+  font-weight: bold;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+#connectedUsers{
+  display: hidden;
 }
